[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/art/ui/button/BttnPrev.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/button/BttnNext.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/panel/PanelMarbleFlat.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/button/BttnNextHover.png" type="Texture" id=4]
[ext_resource path="res://assets/art/ui/button/BttnPrevHover.png" type="Texture" id=5]
[ext_resource path="res://src/UI/MenuLayer/Components/CharacterSelector.gd" type="Script" id=6]
[ext_resource path="res://assets/audio/ui/change_character.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/art/player/Archer.png" type="Texture" id=8]
[ext_resource path="res://assets/art/player/Mage.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 18 ]
}

[sub_resource type="Animation" id=2]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 21, 18 ]
}

[sub_resource type="Animation" id=4]
resource_name = "falling"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=5]
resource_name = "falling_weapon"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=6]
length = 7.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=9]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=11]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=12]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Archer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 18 ]
}

[sub_resource type="Animation" id=14]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=15]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 21, 18 ]
}

[sub_resource type="Animation" id=16]
resource_name = "falling"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=17]
resource_name = "falling_weapon"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=18]
length = 7.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}

[sub_resource type="Animation" id=19]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=20]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=21]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=22]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=23]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=24]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[node name="CharacterSelector" type="Control"]
script = ExtResource( 6 )

[node name="CharacterView" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -135.0
margin_right = 96.0
margin_bottom = 135.0
texture = ExtResource( 3 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96

[node name="BttnPrev" type="TextureButton" parent="CharacterView"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -20.0
margin_right = 18.0
margin_bottom = 26.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 5 )

[node name="CharacterSpriteBox" type="Control" parent="CharacterView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 32.0
margin_right = -27.0
margin_bottom = -32.0

[node name="Archer" type="Control" parent="CharacterView/CharacterSpriteBox"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterView/CharacterSpriteBox/Archer"]
root_node = NodePath("../..")
playback_speed = 2.6
anims/RESET = SubResource( 1 )
anims/crouch = SubResource( 2 )
anims/death = SubResource( 3 )
anims/falling = SubResource( 4 )
anims/falling_weapon = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/idle_weapon = SubResource( 7 )
anims/jumping = SubResource( 8 )
anims/jumping_weapon = SubResource( 9 )
anims/run = SubResource( 10 )
anims/run_weapon = SubResource( 11 )
anims/standing_weapon_ready = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="CharacterView/CharacterSpriteBox/Archer"]
position = Vector2( 85, 103 )
scale = Vector2( 4.90625, 4.90625 )
texture = ExtResource( 8 )
hframes = 16
vframes = 2
frame = 18

[node name="Mage" type="Control" parent="CharacterView/CharacterSpriteBox"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="CharacterView/CharacterSpriteBox/Mage"]
position = Vector2( 85, 103 )
scale = Vector2( 4.90625, 4.90625 )
texture = ExtResource( 9 )
hframes = 16
vframes = 2
frame = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterView/CharacterSpriteBox/Mage"]
playback_speed = 2.6
anims/RESET = SubResource( 13 )
anims/crouch = SubResource( 14 )
anims/death = SubResource( 15 )
anims/falling = SubResource( 16 )
anims/falling_weapon = SubResource( 17 )
anims/idle = SubResource( 18 )
anims/idle_weapon = SubResource( 19 )
anims/jumping = SubResource( 20 )
anims/jumping_weapon = SubResource( 21 )
anims/run = SubResource( 22 )
anims/run_weapon = SubResource( 23 )
anims/standing_weapon_ready = SubResource( 24 )

[node name="BttnNext" type="TextureButton" parent="CharacterView"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -20.0
margin_right = 34.0
margin_bottom = 26.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )

[node name="ChangePageAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Fx"

[connection signal="pressed" from="CharacterView/BttnPrev" to="." method="_on_BttnPrev_pressed"]
[connection signal="pressed" from="CharacterView/BttnNext" to="." method="_on_BttnNext_pressed"]
